--- a/tools/3ds-max-plugin/3ds-max-plugin.vcxproj
+++ b/tools/3ds-max-plugin/3ds-max-plugin.vcxproj
@@ -120,9 +120,12 @@
   <ItemGroup>
     <ClInclude Include="..\..\app\src\main\cpp\include\GXCommon\GXMath.hpp" />
     <ClInclude Include="include\class_desc.hpp" />
+    <ClInclude Include="include\exporter.hpp" />
     <ClInclude Include="include\mesh_exporter.hpp" />
     <ClInclude Include="include\plugin.hpp" />
     <ClInclude Include="include\resource.hpp" />
+    <ClInclude Include="include\result_checker.hpp" />
+    <ClInclude Include="include\skin_exporter.hpp" />
     <ClInclude Include="include\utility.hpp" />
     <ClInclude Include="include\version.hpp" />
   </ItemGroup>
@@ -131,8 +134,11 @@
     <ClCompile Include="..\..\app\src\main\cpp\sources\GXCommon\Intrinsics\GXMathCPU.cpp" />
     <ClCompile Include="sources\class_desc.cpp" />
     <ClCompile Include="sources\dll_main.cpp" />
+    <ClCompile Include="sources\exporter.cpp" />
     <ClCompile Include="sources\mesh_exporter.cpp" />
     <ClCompile Include="sources\plugin.cpp" />
+    <ClCompile Include="sources\result_checker.cpp" />
+    <ClCompile Include="sources\skin_exporter.cpp" />
     <ClCompile Include="sources\utility.cpp" />
   </ItemGroup>
   <ItemGroup>
