pbr: - Set emission method fix - skeletal mesh component development

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
-*.inc text eol=lf diff
 *.cs text eol=lf diff
+*.inc text eol=lf diff
+*.lua text eol=lf diff
 *.ps text eol=lf diff
 *.vs text eol=lf diff
