pbr: - skeletal mesh system development - code style

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -178,7 +178,9 @@ add_library ( android-vulkan SHARED
     app/src/main/cpp/sources/pbr/scriptable_sweep_test_result.cpp
     app/src/main/cpp/sources/pbr/set_attribute_checker.cpp
     app/src/main/cpp/sources/pbr/skeletal_mesh_component.cpp
+    app/src/main/cpp/sources/pbr/skin_descriptor_set_layout.cpp
     app/src/main/cpp/sources/pbr/skin_pool.cpp
+    app/src/main/cpp/sources/pbr/skin_program.cpp
     app/src/main/cpp/sources/pbr/sound_emitter_global_component.cpp
     app/src/main/cpp/sources/pbr/sound_emitter_spatial_component.cpp
     app/src/main/cpp/sources/pbr/src_property_checker.cpp
