Documentation: - build requirements have been updated
Project:
- Android Studio Giraffe | 2022.3.1 Patch 2 support
- Android Studio Gradle Plugin has been updated to 8.1.2
- Android NDK has been updated to 26.1.10909125
- Kotlin has been updated to 1.9.10
- Kotlin Gradle plugin has been updated to 1.9.10
- Gradle has been updated to 8.4-bin
- DirectX Shader Compiler has been updated to 1.7.2308.10173
- SPIR-V shader blobs have been recompiled (no changes)
- FreeType has been updated to 2.13.2, 4e61303a3b0e6656c38dd9da9f70d18d7e30585b
- VVL has been updated to 6aff75b8564393e3fb52f592f65d16f32517637a
- Lua 5.4.6 has been updated to 6baee9ef9d5657ab582c8a4b9f885ec58ed502d0
- stb_image 2.28 has been updated to beebb24b945efdea3b9bba23affb8eb3ba8982e7

3rd-party:
- FreeType headers have been updated
- FreeType binary has been updated
- Lua header files have been updated
- Lua binary has been updated
- VVL binary has been updated
- gradlew has been updated

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,9 +5,10 @@ plugins {
 
 android {
     // It's deprecated now. But I have no clue how to specify explicit build tool version.
+    // noinspection GrDeprecatedAPIUsage
     buildToolsVersion "34.0.0"
 
-    ndkVersion "25.2.9519653"
+    ndkVersion "26.1.10909125"
     namespace 'com.goshidoInc.androidVulkan'
 
     defaultConfig {
