--- a/build.gradle
+++ b/build.gradle
@@ -6,10 +6,10 @@ buildscript {
         mavenCentral()
     }
 
-    ext.kotlin_version = '1.9.0'
+    ext.kotlin_version = "1.9.10"
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.1.1'
+        classpath "com.android.tools.build:gradle:8.1.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
