Documentation: - VVL compilation page has been updated - shader compilation page has been updated - 3ds Max page has been updated - HTML validator page has been updated - build requirements have been updated
Project:
- Android Studio Iguana | 2023.2.1 support
- Android Studio Gradle Plugin has been updated to 8.3.0
- DirectX Shader Compiler has been updated to 1.8.2403.10076, 136f994a2f7448200aa21e1222d96ca6c11073aa
- SPIR-V shader blobs have been recompiled (no changes)
- FreeType has been updated to 2.13.2, 660a7017faba70e6806a01447c32d37568ac5ee4
- VVL has been updated to 82be16cb105068820a02962395fff3e81036254c

3rd-party:
- FreeType headers have been updated
- FreeType binary has been updated
- VVL binary has been updated
- gradlew has been updated

tools:
- HTML validator has been recompiled
- 3ds Max exporter has been recompiled

--- a/tools/3ds-max-plugin/sources/version.rc
+++ b/tools/3ds-max-plugin/sources/version.rc
@@ -33,7 +33,7 @@ BEGIN
             VALUE "FileDescription", "android-vulkan exporter"
             VALUE "FileVersion", VERSION_STRING
             VALUE "InternalName", "android-vulkan.dle"
-            VALUE "LegalCopyright", "2023 - 2023 © Goshido Inc. All rights reserved."
+            VALUE "LegalCopyright", "2023 - 2024. Goshido Inc. All rights reserved."
             VALUE "OriginalFilename", "android-vulkan.dle"
             VALUE "ProductName", "android-vulkan exporter"
             VALUE "ProductVersion", VERSION_STRING
