Documentation: - VVL page has been updated - shader compilation page has been updated - HTML validator page has been updated - 3ds Max exporter page has been updated - build requirements have been updated
Project:
- DirectX Shader Compiler has been updated to 1.8.2405.10047, 80f6e46bf8cd0e193f90040168e4e48f4e0576aa
- SPIR-V shader blobs have been recompiled
- FreeType 2.13.2 has been updated to d41a855aab6d8ce131c465ce01f0f536e0fb2269
- VVL has been updated to 1.3.287, 15ba84ba94ff2ed473474deba2b4f2af4705b1fb
- Lua 5.5.0 has been updated to bdc85357aa41a9610498232c2cffe7aa191e5cf6
- stb_image has been updated to 2.30, 013ac3beddff3dbffafd5177e7972067cd2b5083

3rd-party:
- FreeType headers have been updated
- FreeType binary has been updated
- Lua header files have been updated
- Lua binary has been updated
- VVL binary has been updated

pbr:
- Cook-Torrance lighting model has been improved
- exposure pass sync errors have been fixed

HTML validator:
- HTML validator has been updated to 1.0.1.9
- Windows 11 support
- Visual Studio 2022 Community 17.10.2 support
- Windows 11 SDK has been changed to 10.0.26100

3ds Max exporter:
- 3ds Max exporter has been updated to 1.0.1.5
- Windows 11 support
- Visual Studio 2022 Community 17.10.2 support
- Windows 11 SDK has been changed to 10.0.26100

--- a/app/src/main/cpp/include/vulkan_device.in
+++ b/app/src/main/cpp/include/vulkan_device.in
@@ -18,6 +18,7 @@ X ( vkCmdDispatch )
 X ( vkCmdDraw )
 X ( vkCmdDrawIndexed )
 X ( vkCmdEndRenderPass )
+X ( vkCmdFillBuffer )
 X ( vkCmdNextSubpass )
 X ( vkCmdPipelineBarrier )
 X ( vkCmdPushConstants )
