editor: - SaveState (creations, save)

--- a/tools/editor/editor.vcxproj
+++ b/tools/editor/editor.vcxproj
@@ -178,12 +178,14 @@
     <ClCompile Include="src\crash_dump.cpp" />
     <ClCompile Include="src\editor.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\save_state.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\app\src\main\cpp\include\logger.hpp" />
     <ClInclude Include="..\..\app\src\main\cpp\include\trace.hpp" />
     <ClInclude Include="include\crash_dump.hpp" />
     <ClInclude Include="include\editor.hpp" />
+    <ClInclude Include="include\save_state.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="src\main.rc" />
